index.html: moved modal lower so it's not blocked by fixed navbar on mobile displays

--- a/assets/style.css
+++ b/assets/style.css
@@ -125,3 +125,12 @@ body {
 .navbar-toggler {
     border:0px;
 }
+
+#myModal {
+    /*z-index: 1;*/
+}
+
+.my-modal-content {
+    margin-top: 270px;
+}
+
